feat: improve mb run command

--- a/cbc.yaml
+++ b/cbc.yaml
@@ -15,4 +15,7 @@ microbenchmark:
   repository: https://github.com/christophwitzko/go-benchmark-tests.git
   v1: v1
   v2: v2
+  outputs:
+    - gs://mb-test-results/go-benchmark-tests-{{.RunIndex}}.csv?chunked=true&no-csv-header=true
+    - /tmp/go-benchmark-tests.csv
 #  excludeFilter: "^chi.*$"
