feat: delete old research code

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,8 +1,10 @@
 linters:
   enable:
     - errorlint
+    - forbidigo
     - gocritic
     - gofumpt
+    - goimports
     - misspell
     - revive
     - unconvert
