--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -2,6 +2,7 @@ linters:
   enable:
     - errorlint
     - forbidigo
+    - gochecknoinits
     - gocritic
     - gofumpt
     - goimports
@@ -10,3 +11,10 @@ linters:
     - unconvert
     - unparam
     - wastedassign
+linters-settings:
+  govet:
+    enable-all: true
+    disable:
+      - fieldalignment
+  gofumpt:
+    extra-rules: true
