--- a/cbc.yaml
+++ b/cbc.yaml
@@ -13,24 +13,31 @@ sshPrivateKey: |
   vu9cxdz0nidTFZdUZrfWAAAABnVidW50dQECAwQFBgc=
   -----END OPENSSH PRIVATE KEY-----
 goVersion: 1.19
-#microbenchmark:
-#  name: go-benchmark-tests
-#  repository: https://github.com/christophwitzko/go-benchmark-tests.git
-#  runs: 1
-#  v1: v1
-#  v2: v2
-#  outputs:
-#    #    - gs://mb-test-results/{{.Name}}/run-{{.RunIndex}}.csv?chunked=true&new-chunk-fn=suite&no-csv-header=true
-#    - gs://mb-test-results/{{.Name}}/run-{{.RunIndex}}.csv?no-csv-header=true
-#  includeFilter: "^foo.*$"
 microbenchmark:
-  name: flight-booking-service
-  repository: https://github.com/christophwitzko/flight-booking-service.git
+  name: go-benchmark-tests
+  repository: https://github.com/christophwitzko/go-benchmark-tests.git
   runs: 1
-  suiteRuns: 1
+  v1: v1
+  v2: v2
+  outputs:
+    #    - gs://mb-test-results/{{.Name}}/run-{{.RunIndex}}.csv?chunked=true&new-chunk-fn=suite&no-csv-header=true
+    - gs://mb-test-results/{{.Name}}/run-{{.RunIndex}}.csv?no-csv-header=true
+  includeFilter: "^foo.*$"
+#microbenchmark:
+#  name: flight-booking-service
+#  repository: https://github.com/christophwitzko/flight-booking-service.git
+#  runs: 1
+#  suiteRuns: 1
+#  v1: main
+#  v2: main
+#  outputs:
+#    - gs://mb-test-results/{{.Name}}/{{.Timestamp}}-run-{{.RunIndex}}.csv?no-csv-header=true
+##  includeFilter: "^database.*$"
+#  excludeFilter: "^chi.*$"
+application:
+  name: go-benchmark-tests
+  repository: https://github.com/christophwitzko/go-benchmark-tests.git
   v1: main
   v2: main
-  outputs:
-    - gs://mb-test-results/{{.Name}}/{{.Timestamp}}-run-{{.RunIndex}}.csv?no-csv-header=true
-#  includeFilter: "^database.*$"
-  excludeFilter: "^chi.*$"
+  package: ./
+  logFilter: GET
