--- a/cbc.yaml
+++ b/cbc.yaml
@@ -44,8 +44,6 @@ application:
   limitCPU: true
   benchmark:
     instanceType: n2-highcpu-8
-#    config: ./artillery/config_80.yaml # main reaches 99%
-    config: ./artillery/config_70.yaml # 85%-90%
-#    config: ./artillery/config_42.yaml # perf-issue-request-id reaches 85%-90%
+    tool: k6
     reference: main
     output: gs://cbc-results/{{.Name}}/ab-{{.V1}}-{{.V2}}-{{.Timestamp}}
