--- a/cbc.yaml
+++ b/cbc.yaml
@@ -46,4 +46,9 @@ application:
     instanceType: n2-highcpu-8
     tool: k6
     reference: main
+    env:
+      - searchFlights_vus=50
+      - searchFlights_iterations=100
+      - searchAndBookFlight_vus=10
+      - searchAndBookFlight_iterations=100
     output: gs://cbc-results/{{.Name}}/ab-{{.V1}}-{{.V2}}-{{.Timestamp}}
