--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.gz filter=lfs diff=lfs merge=lfs -text
+
+*.ipynb	diff=jupyternotebook
+*.ipynb	merge=jupyternotebook
